--- a/app/src/main/res/layout/item_playlist.xml
+++ b/app/src/main/res/layout/item_playlist.xml
@@ -1,33 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:padding="5dp"
+              android:background="?selectableItemBackgroundBorderless"
+              android:orientation="vertical">
 
-    <ImageView
-            android:id="@+id/cimg"
-            android:layout_width="50sp"
-            android:layout_height="50sp"
-            android:layout_marginStart="10sp"
-            android:contentDescription="@string/browse"/>
-
-    <TextView
-            android:id="@+id/item_name"
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16sp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="12dp"
-            android:lines="1"
-            android:paddingStart="60sp"
-            android:text="Name"
-            android:textColor="#000"
-            android:textSize="22sp"/>
+            android:gravity="center_vertical"
+            android:layout_marginBottom="5dp"
+            android:orientation="horizontal">
+
+        <ImageView
+                android:id="@+id/iv_channel"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="10dp"
+                android:contentDescription="@string/browse"/>
+
+        <TextView
+                android:id="@+id/item_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:lines="1"
+                android:text="Name"
+                android:textColor="#000"
+                android:textSize="22sp"
+                android:layout_marginStart="4dp"/>
+    </LinearLayout>
+
 
     <View
             android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_below="@+id/item_name"/>
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray"/>
 
-</RelativeLayout>
+</LinearLayout>
+
