--- a/app/src/main/res/layout/item_playlist.xml
+++ b/app/src/main/res/layout/item_playlist.xml
@@ -26,6 +26,7 @@
 
             <ImageView
                     android:id="@+id/iv_channel"
+                    android:src="@drawable/tv"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_margin="10dp"
