casting integration initiation failed.

--- a/app/src/main/res/layout/activity_player_exo.xml
+++ b/app/src/main/res/layout/activity_player_exo.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:keepScreenOn="true"
               tools:context=".player.PlayerExo">
+
 
     <com.devbrackets.android.exomedia.ui.widget.VideoView
             android:id="@+id/video_view"
@@ -14,4 +15,12 @@
             android:visibility="visible"
             app:useDefaultControls="true"/>
 
-</LinearLayout>
+    <android.support.v7.app.MediaRouteButton
+            android:id="@+id/media_route_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:mediaRouteTypes="user"
+            android:visibility="visible" />
+
+</RelativeLayout>
