--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -10,4 +10,13 @@
             android:title="@string/action_search"
             app:showAsAction="always"
             app:actionViewClass="android.support.v7.widget.SearchView"/>
+
+    <item
+            android:id="@+id/media_route_menu_item"
+            android:title="/media_route_menu_title"
+            android:orderInCategory="101"
+            android:icon="@android:drawable/ic_dialog_email"
+            app:actionProviderClass="android.support.v7.app.MediaRouteActionProvider"
+            app:showAsAction="always" />
+
 </menu>
