--- a/app/src/main/res/layout/activity_categories.xml
+++ b/app/src/main/res/layout/activity_categories.xml
@@ -5,16 +5,30 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/bg"
         tools:context=".categories.CategoriesActivity">
 
+    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
+                  app:layout_constraintTop_toTopOf="parent"
+                  app:layout_constraintStart_toStartOf="parent"
+                  app:layout_constraintBottom_toBottomOf="parent"
+                  app:layout_constraintEnd_toEndOf="parent">
 
-    <android.support.v7.widget.RecyclerView
-            android:id="@+id/rvCategories"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/rvCategories"
+                android:layout_width="200dp"
+                android:layout_height="match_parent"
+        />
+
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/rvCategoryItems"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingVertical="4dp"
+                android:paddingHorizontal="4dp"
+                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
+
+    </LinearLayout>
+
 
 </android.support.constraint.ConstraintLayout>
