--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,16 +5,66 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context=".list.ListActivity">
+        android:background="@drawable/bg"
+        tools:context="com.iptv.android.main.MainActivity">
 
-    <android.support.v7.widget.RecyclerView
-            android:id="@+id/rvPlayList"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+    <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="40dp"
+            android:orientation="vertical" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:id="@+id/linearLayout">
+
+        <ImageView android:src="@drawable/iptv" android:layout_width="wrap_content" android:layout_height="60dp"/>
+
+        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
+                      android:paddingStart="20dp"
+                      android:paddingEnd="20dp"
+                      android:orientation="horizontal">
+
+            <ImageView
+                    android:id="@+id/iv_livetv"
+                    android:src="@drawable/cat_tv"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:tint="@color/selector_tint"
+                    android:layout_marginEnd="5dp"/>
+            <ImageView
+                    android:id="@+id/iv_series"
+                    android:src="@drawable/cat_series"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:tint="@color/selector_tint"
+                    android:layout_marginEnd="5dp"/>
+            <ImageView
+                    android:id="@+id/iv_vod"
+                    android:src="@drawable/cat_vod"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:tint="@color/selector_tint"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="5dp"/>
+            <ImageView
+                    android:id="@+id/iv_radio"
+                    android:src="@drawable/cat_radio"
+                    android:layout_width="0dp"
+                    android:tint="@color/selector_tint"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+    <ImageView android:id="@+id/iv_settings" android:src="@drawable/settings_icon" android:layout_width="40dp"
+               android:layout_height="40dp" app:layout_constraintEnd_toEndOf="@+id/linearLayout"
+               android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
+               android:tint="@color/selector_tint"
+               app:layout_constraintBottom_toBottomOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
