--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -8,66 +8,30 @@
 
     <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp">
 
-        <ImageView
-                android:src="@drawable/ic_arrow_right"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_alignParentEnd="true"/>
-
-        <LinearLayout
+        <TextView
+                android:id="@+id/item_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:layout_marginBottom="5dp"
-                android:orientation="horizontal">
-
-            <ImageView
-                    android:id="@+id/iv_channel"
-                    android:src="@drawable/tv"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_margin="10dp"
-                    android:contentDescription="@string/browse"/>
-
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="4dp"
-                    android:orientation="vertical">
-
-                <TextView
-                        android:id="@+id/item_name"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:lines="1"
-                        android:text="Name"
-                        android:textStyle="bold"
-                        android:textColor="#000"
-                        android:textSize="16sp"
-                        android:layout_marginBottom="5dp"/>
-
-                <TextView
-                        android:id="@+id/tv_total_count"
-                        android:text="Toplam Yayın : 5"
-                        android:textStyle="bold"
-                        android:textSize="14sp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-            </LinearLayout>
-
-        </LinearLayout>
+                android:lines="1"
+                android:text="Name"
+                android:textStyle="bold"
+                android:textColor="#FFF"
+                android:textSize="16sp"
+                android:layout_marginBottom="5dp"/>
 
     </RelativeLayout>
-
 
 
     <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/gray"/>
+            android:background="#AAFFFFFF"/>
 
 </LinearLayout>
 
