--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#C88F45</color>
-    <color name="colorPrimaryDark">#C88F45</color>
-    <color name="colorAccent">#C88F45</color>
+    <color name="colorPrimary">#000099</color>
+    <color name="colorPrimaryDark">#000099</color>
+    <color name="colorAccent">#000099</color>
     <color name="gray">#33aaaaaa</color>
 </resources>
